Shifting back to development to fix paymwent notifications

--- a/app/assets/stylesheets/admin/simple-sidebar.css
+++ b/app/assets/stylesheets/admin/simple-sidebar.css
@@ -34,7 +34,7 @@
 }
 
 .sidebar-nav li a {
-  color: #272a31;
+  color: #949fb1;
   font-weight: bold;
   display: block;
   text-decoration: none;
